some changes added

--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,14 @@ code {
  margin: 0 auto;
  width: 600px;
 }
+
+.rm {
+ background: red;
+ border-radius: 50%;
+ -webkit-border-radius: 50%;
+ -moz-border-radius: 50%;
+ -ms-border-radius: 50%;
+ -o-border-radius: 50%;
+ color: #fff;
+ border: none;
+}
